[package]
name = "vast"
version = "0.1.0"
edition = "2021"
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["ntdef", "processthreadsapi", "winnt", "impl-default", "heapapi", "memoryapi", "debugapi"] }
bstr = "1.4.0"
ntapi = "0.4.1"
rust-embed = "6.6.1"
base64 = "0.21.0"
obfstr = "0.4.3"
scanf = "1.2.1"


[profile.dev]
#opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[lib]
crate-type = ["cdylib"]
